--- a/index.html
+++ b/index.html
@@ -6,44 +6,36 @@
   <title>NeonEdge IT Support — 24/7 Dark Tech Support</title>
   <meta name="description" content="NeonEdge IT Support — 24/7 enterprise & SMB IT support, network, security, cloud & device services." />
 
-  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
   <style>
     :root{
-      --bg:#09060a; /* very dark */
+      --bg:#09060a;
       --card:#0f0c12;
       --muted:#9aa0a6;
       --neon-cyan: #00e6ff;
       --neon-magenta: #ff43d7;
       --neon-green: #8cff6b;
-      --glass: rgba(255,255,255,0.03);
+      --divider: rgba(255,255,255,0.06);
       --accent-glow: 0 8px 30px rgba(0,230,255,0.06), 0 2px 6px rgba(255,67,215,0.03);
-      --radius: 14px;
       font-family: 'Inter',system-ui,Segoe UI,Roboto,Helvetica,Arial;
     }
     *{box-sizing:border-box}
-    html,body{height:100%}
     body{
       margin:0;
       background: radial-gradient(1200px 600px at 10% 10%, rgba(0,230,255,0.03), transparent),
                   radial-gradient(900px 400px at 90% 90%, rgba(255,67,215,0.03), transparent),
                   var(--bg);
       color:#e6eef6;
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
       line-height:1.4;
       padding-bottom:60px;
     }
 
-    /* Container */
     .container{max-width:1120px;margin:0 auto;padding:28px}
 
-    /* Header */
-    header{display:flex;align-items:center;justify-content:space-between;padding:18px 0}
+    header{display:flex;align-items:center;justify-content:space-between;padding:18px 0;border-bottom:1px solid var(--divider)}
     .brand{display:flex;gap:14px;align-items:center}
     .logo{width:54px;height:54px;border-radius:12px;background:linear-gradient(135deg,var(--neon-cyan),var(--neon-magenta));display:flex;align-items:center;justify-content:center;box-shadow:var(--accent-glow)}
-    .logo svg{filter:drop-shadow(0 6px 18px rgba(0,0,0,0.6))}
     .brand h1{margin:0;font-size:18px;letter-spacing:0.4px}
     .brand p{margin:0;font-size:12px;color:var(--muted)}
 
@@ -51,8 +43,9 @@
     nav a{color:var(--muted);text-decoration:none;font-weight:600}
     .cta{background:linear-gradient(90deg,var(--neon-cyan),var(--neon-magenta));color:#02030a;padding:10px 14px;border-radius:12px;font-weight:700;text-decoration:none;box-shadow:var(--accent-glow)}
 
-    /* Hero */
-    .hero{display:grid;grid-template-columns:1fr 420px;gap:30px;align-items:center;padding:40px 0}
+    section{padding:60px 0;border-bottom:1px solid var(--divider)}
+
+    .hero{display:grid;grid-template-columns:1fr 420px;gap:30px;align-items:center}
     .eyebrow{display:inline-block;padding:6px 10px;background:linear-gradient(90deg, rgba(0,230,255,0.06), rgba(255,67,215,0.04));border-radius:999px;color:var(--neon-cyan);font-weight:700;font-size:12px}
     .hero h2{font-size:40px;margin:12px 0 10px}
     .hero p.lead{color:var(--muted);margin:0 0 20px}
@@ -62,82 +55,38 @@
     .feature h4{margin:0 0 6px}
     .feature p{margin:0;color:var(--muted);font-size:13px}
 
-    /* Right panel */
     .panel{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));padding:22px;border-radius:16px;border:1px solid rgba(255,255,255,0.03);box-shadow:0 10px 40px rgba(2,4,8,0.6)}
-    .panel h3{margin:0 0 10px}
-    .phone{display:flex;align-items:center;gap:12px}
-    .phone .number{font-weight:800;font-size:20px}
-    .btn-call{display:inline-flex;gap:10px;align-items:center;padding:10px 14px;border-radius:12px;background:linear-gradient(90deg,var(--neon-green),var(--neon-cyan));color:#02030a;font-weight:800;text-decoration:none}
 
-    /* Services */
     .services{display:grid;grid-template-columns:repeat(3,1fr);gap:18px;margin-top:26px}
     .service-card{background:linear-gradient(180deg, rgba(255,255,255,0.01), transparent);padding:18px;border-radius:14px;border:1px solid rgba(255,255,255,0.02)}
-    .service-card h4{margin:0 0 8px}
-    .service-card p{margin:0;color:var(--muted);font-size:14px}
 
-    /* Industries */
-    .industries{margin-top:34px;display:flex;gap:12px;flex-wrap:wrap}
+    .industries{display:flex;gap:12px;flex-wrap:wrap}
     .industry{padding:10px 14px;border-radius:12px;background:linear-gradient(90deg, rgba(0,230,255,0.02), rgba(255,67,215,0.02));font-weight:700;color:var(--muted)}
 
-    /* Testimonials / FAQ */
-    .split{display:grid;grid-template-columns:2fr 1fr;gap:20px;margin-top:28px}
-    .testimonials{display:flex;flex-direction:column;gap:12px}
-    .testimonial{background:var(--card);padding:14px;border-radius:12px;border:1px solid rgba(255,255,255,0.02)}
-    .testimonial p{margin:0;color:var(--muted)}
+    .split{display:grid;grid-template-columns:2fr 1fr;gap:20px}
+    .testimonial, .faq{background:var(--card);padding:14px;border-radius:12px;border:1px solid rgba(255,255,255,0.02)}
 
-    .faq{padding:14px;background:linear-gradient(180deg, rgba(255,255,255,0.01), transparent);border-radius:12px}
-    .faq h4{margin-top:0}
-    .faq-details{color:var(--muted);font-size:14px}
-
-    /* Contact */
-    .contact{margin-top:34px;padding:22px;border-radius:12px;background:linear-gradient(180deg, rgba(255,255,255,0.02), transparent);border:1px solid rgba(255,255,255,0.02);display:flex;gap:20px}
+    .contact{display:flex;gap:20px}
     .contact form{flex:1;display:flex;flex-direction:column;gap:10px}
     .contact input,.contact textarea{background:transparent;border:1px solid rgba(255,255,255,0.06);padding:12px;border-radius:10px;color:inherit}
     .contact button{align-self:flex-start;padding:10px 14px;border-radius:12px;border:none;background:linear-gradient(90deg,var(--neon-cyan),var(--neon-magenta));font-weight:800;color:#02030a}
 
-    /* Footer */
-    footer{margin-top:40px;padding:18px 0;color:var(--muted);font-size:13px;text-align:center}
+    footer{padding:40px 0 18px;text-align:center;color:var(--muted);font-size:13px;border-top:1px solid var(--divider)}
 
-    /* Responsive */
-    @media (max-width:980px){
-      .hero{grid-template-columns:1fr}
-      .panel{order:2}
-      .services{grid-template-columns:repeat(2,1fr)}
-      .split{grid-template-columns:1fr}
-    }
-    @media (max-width:520px){
-      .brand p{display:none}
-      .services{grid-template-columns:1fr}
-      nav{display:none}
-      .logo{width:44px;height:44px}
-      .hero h2{font-size:28px}
-      .container{padding:16px}
-      .cta{padding:8px 10px}
-    }
-
-    /* subtle animated highlight */
-    .glow{position:relative}
-    .glow:after{content:'';position:absolute;inset:-2px;border-radius:inherit;background:linear-gradient(90deg, rgba(0,230,255,0.06), rgba(255,67,215,0.04));opacity:0;transition:opacity .25s}
-    .glow:hover:after{opacity:1}
+    @media(max-width:980px){.hero{grid-template-columns:1fr}.services{grid-template-columns:repeat(2,1fr)}.split{grid-template-columns:1fr}}
+    @media(max-width:520px){.services{grid-template-columns:1fr}.container{padding:16px}}
   </style>
 </head>
 <body>
   <div class="container">
     <header>
       <div class="brand">
-        <div class="logo" aria-hidden="true">
-          <!-- simple neon circuit SVG -->
-          <svg width="34" height="34" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <rect x="3" y="3" width="18" height="18" rx="4" fill="rgba(0,0,0,0.12)"/>
-            <path d="M7 12h10M12 7v10" stroke="#02030a" stroke-width="1.4" stroke-linecap="round"/>
-          </svg>
-        </div>
+        <div class="logo"></div>
         <div>
           <h1>NeonEdge IT Support</h1>
           <p>24/7 Dark Tech — Network, Security & Cloud</p>
         </div>
       </div>
-
       <nav>
         <a href="#services">Services</a>
         <a href="#industries">Industries</a>
@@ -147,186 +96,55 @@
       </nav>
     </header>
 
-    <main>
-      <section class="hero">
-        <div>
-          <span class="eyebrow">Enterprise & SMB</span>
-          <h2>We keep your systems online, secure, and fast — 24/7</h2>
-          <p class="lead">NeonEdge provides proactive monitoring, incident response, desktop & server support, and secure cloud migration with SLA-backed SLAs and dedicated engineers.</p>
+    <section class="hero">
+      <div>
+        <span class="eyebrow">Enterprise & SMB</span>
+        <h2>We keep your systems online, secure, and fast — 24/7</h2>
+        <p class="lead">NeonEdge provides proactive monitoring, incident response, desktop & server support, and secure cloud migration.</p>
+      </div>
+    </section>
 
-          <div class="features">
-            <div class="feature">
-              <h4>Rapid Response</h4>
-              <p>Hybrid remote + onsite model — average first response under 1 hour.</p>
-            </div>
-            <div class="feature">
-              <h4>Security Focused</h4>
-              <p>Threat detection, endpoint hardening, and automated patching.</p>
-            </div>
-            <div class="feature">
-              <h4>Transparent Pricing</h4>
-              <p>Flexible support plans for startups to enterprise teams.</p>
-            </div>
-          </div>
+    <section id="services">
+      <h3>Our Services</h3>
+      <div class="services">
+        <div class="service-card"><h4>Windows & Microsoft 365</h4><p>Account, Exchange, Active Directory support.</p></div>
+        <div class="service-card"><h4>Network & Wi‑Fi</h4><p>Design, monitoring, firewall & VPN configuration.</p></div>
+        <div class="service-card"><h4>Endpoint Security</h4><p>Antivirus, EDR, patch management and threat response.</p></div>
+      </div>
+    </section>
 
-          <div class="services" id="services" style="margin-top:22px">
-            <div class="service-card">
-              <h4>Windows & Microsoft 365</h4>
-              <p>Account, Exchange, Active Directory and Office support.</p>
-            </div>
-            <div class="service-card">
-              <h4>Network & Wi‑Fi</h4>
-              <p>Design, monitoring, firewall & VPN configuration.</p>
-            </div>
-            <div class="service-card">
-              <h4>Endpoint Security</h4>
-              <p>Antivirus, EDR, patch management and threat response.</p>
-            </div>
-            <div class="service-card">
-              <h4>Backup & Recovery</h4>
-              <p>Onsite & cloud backup, ransomware recovery planning.</p>
-            </div>
-            <div class="service-card">
-              <h4>Cloud Migration</h4>
-              <p>Azure / AWS / Google Cloud migrations and optimizations.</p>
-            </div>
-            <div class="service-card">
-              <h4>Printer & Device Support</h4>
-              <p>Provisioning, drivers, and local device troubleshooting.</p>
-            </div>
-          </div>
+    <section id="industries">
+      <h3>Industries We Serve</h3>
+      <div class="industries">
+        <div class="industry">Healthcare</div>
+        <div class="industry">Finance</div>
+        <div class="industry">Legal</div>
+        <div class="industry">Education</div>
+      </div>
+    </section>
 
-        </div>
+    <section id="testimonials">
+      <h3>What Our Clients Say</h3>
+      <div class="split">
+        <div class="testimonial"><p>“NeonEdge restored our systems within hours after a ransomware attack.”</p></div>
+        <div class="faq"><h4>Do you offer 24/7 support?</h4><p>Yes — we provide 24/7 monitoring and phone support.</p></div>
+      </div>
+    </section>
 
-        <aside class="panel">
-          <h3>Get help now</h3>
-          <p style="color:var(--muted);margin-bottom:12px">Live technicians available — phone, remote session, or onsite.</p>
-
-          <div class="phone">
-            <div>
-              <div style="font-size:12px;color:var(--muted)">Toll Free</div>
-              <div class="number">(888) 649-7907</div>
-            </div>
-            <div style="margin-left:auto">
-              <a class="btn-call" href="tel:+18886497907">📞 Call Now</a>
-            </div>
-          </div>
-
-          <hr style="margin:14px 0;border:none;border-top:1px solid rgba(255,255,255,0.03)"/>
-
-          <div style="display:flex;gap:10px;align-items:center">
-            <div style="flex:1">
-              <strong style="display:block">SLA Plans</strong>
-              <small style="color:var(--muted)">From ad-hoc to fully managed 24/7 support</small>
-            </div>
-            <a href="#contact" class="glow" style="text-decoration:none;padding:10px 12px;border-radius:10px;background:rgba(255,255,255,0.02);font-weight:700">Get Plan</a>
-          </div>
-        </aside>
-      </section>
-
-      <section id="industries" style="margin-top:8px">
-        <h3 style="margin-bottom:8px">Industries We Serve</h3>
-        <div class="industries">
-          <div class="industry">Healthcare</div>
-          <div class="industry">Finance</div>
-          <div class="industry">Legal</div>
-          <div class="industry">Education</div>
-          <div class="industry">Retail</div>
-          <div class="industry">Manufacturing</div>
-        </div>
-      </section>
-
-      <section class="split" id="testimonials">
-        <div>
-          <h3>What our clients say</h3>
-          <div class="testimonials">
-            <div class="testimonial">
-              <strong>Amrita P., IT Manager</strong>
-              <p class="lead" style="margin-top:6px">"NeonEdge restored our systems within hours after a ransomware attack. Their incident team is excellent."</p>
-            </div>
-            <div class="testimonial">
-              <strong>Greg H., CTO</strong>
-              <p style="margin-top:6px;color:var(--muted)">"Proactive monitoring cut our downtime by 70% — support is fast and communicative."</p>
-            </div>
-          </div>
-
-          <div style="margin-top:18px">
-            <h3 style="margin-bottom:8px">Frequently asked</h3>
-            <div class="faq">
-              <h4>Do you offer 24/7 support?</h4>
-              <p class="faq-details">Yes — we provide 24/7 monitoring and options for 24/7 phone support depending on your SLA.</p>
-              <h4>Can you work with our existing vendor stack?</h4>
-              <p class="faq-details">Absolutely. We support Microsoft, Cisco, Fortinet, Sophos, CrowdStrike, and many others.</p>
-            </div>
-          </div>
-        </div>
-
-        <aside>
-          <h3>Contact & Quick Links</h3>
-          <div style="margin-top:12px">
-            <p style="color:var(--muted);margin:0 0 10px">Address (placeholder): 120 Neon Way, Suite 400, Metro City</p>
-            <p style="color:var(--muted);margin:0 0 10px">Email: <a href="mailto:support@neonedge.example" style="color:var(--neon-cyan);text-decoration:none">support@neonedge.example</a></p>
-            <p style="color:var(--muted);margin:0 0 10px">Phone: <a href="tel:+18886497907" style="color:var(--neon-cyan);text-decoration:none">(888) 649-7907</a></p>
-          </div>
-
-          <div style="margin-top:18px;background:linear-gradient(180deg, rgba(255,255,255,0.01), transparent);padding:12px;border-radius:12px">
-            <h4 style="margin:0 0 8px">Support Hours</h4>
-            <p style="margin:0;color:var(--muted)">Mon–Fri: 8:00–20:00 • 24/7 for emergencies</p>
-          </div>
-        </aside>
-      </section>
-
-      <section id="contact" class="contact">
-        <form onsubmit="handleForm(event)">
-          <input type="text" id="name" placeholder="Your name" required />
-          <input type="email" id="email" placeholder="Email" required />
-          <input type="tel" id="phone" placeholder="Phone (for callback)" />
-          <textarea id="message" rows="4" placeholder="How can we help? (Describe your issue)"></textarea>
+    <section id="contact">
+      <h3>Contact Us</h3>
+      <div class="contact">
+        <form>
+          <input type="text" placeholder="Your name" required />
+          <input type="email" placeholder="Email" required />
+          <textarea rows="4" placeholder="Your issue"></textarea>
           <button type="submit">Request Callback</button>
         </form>
+      </div>
+    </section>
 
-        <div style="width:320px;min-width:220px">
-          <h3>Emergency? Call now</h3>
-          <p style="color:var(--muted);margin-top:6px">Click-to-call for mobile users or request a callback and we'll call you within 15 minutes (for premium SLA customers).</p>
-
-          <div style="margin-top:12px;display:flex;flex-direction:column;gap:8px">
-            <a class="btn-call" href="tel:+18886497907">📞 (888) 649-7907</a>
-            <a href="#" style="display:inline-block;padding:10px;border-radius:10px;background:rgba(255,255,255,0.02);text-decoration:none;color:var(--muted);text-align:center">Start Remote Session</a>
-          </div>
-
-          <div style="margin-top:18px;padding:12px;background:var(--card);border-radius:12px;border:1px solid rgba(255,255,255,0.02)">
-            <h4 style="margin:0 0 8px">Payment & Billing</h4>
-            <p style="margin:0;color:var(--muted)">We accept corporate invoices, card payments and purchase orders. Contact billing for enterprise agreements.</p>
-          </div>
-        </div>
-      </section>
-
-    </main>
-
-    <footer>
-      <div>© <span id="year"></span> NeonEdge IT Support — All rights reserved • Built with a Dark Tech aesthetic</div>
-    </footer>
+    <footer>© <span id="year"></span> NeonEdge IT Support — All rights reserved.</footer>
   </div>
-
-  <script>
-    // small JS for year and simple form behavior
-    document.getElementById('year').textContent = new Date().getFullYear();
-
-    function handleForm(e){
-      e.preventDefault();
-      const name = document.getElementById('name').value || 'Client';
-      const email = document.getElementById('email').value;
-      const phone = document.getElementById('phone').value;
-      const message = document.getElementById('message').value || '';
-
-      // Basic client-side validation
-      if(!email){alert('Please enter your email');return}
-
-      // In a real site you'd POST to your server. For this template we just show a friendly message.
-      alert(`Thanks ${name}! We'll reach out to ${email} ${phone?('or '+phone):''} soon.`);
-      // clear form
-      e.target.reset();
-    }
-  </script>
+  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
 </body>
 </html>
